# interviewer-ai

./: .gitignore  ADMIN_DASHBOARD_BACKEND_AUDIT.md  MODULES.md  PLAN.md  PROJECT_OVERVIEW.md  biome.json  docker-compose.dev.yml  http.rest  lint-staged.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  skills-lock.json  turbo.json
apps/form-builder/: .env.example  .env_exmaple  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
apps/form-builder/src/: main.py
apps/form-builder/src/api/: dependencies.py
apps/form-builder/src/api/routes/: ats_match.py  auth.py  file_manager.py  jobs.py  resume_builder.py  resume_upload.py
apps/form-builder/src/core/: config.py  exceptions.py  logging.py  security.py
apps/form-builder/src/models/: mock_db.py
apps/form-builder/src/prompts/: resume_prompt.py
apps/form-builder/src/routes/: resume.py
apps/form-builder/src/schemas/: ats.py  auth.py  job.py  resume.py  resume_schema.py  resume_upload.py
apps/form-builder/src/services/: ats_engine.py  auth_service.py  encryption_service.py  exceptions.py  file_cleanup.py  file_storage.py  gemini_client.py  job_service.py  keyword_extractor.py  llm_service.py  pdf_service.py  prompt_builder.py  resume_analysis.py  resume_generator.py  resume_parser.py  resume_service.py  secure_storage.py  tailored_resume.py
apps/form-builder/src/tests/: conftest.py  test_ats_matching.py  test_ats_matching_unit.py  test_authentication.py  test_file_manager.py  test_job_management.py  test_resume_builder.py  test_resume_builder_unit.py  test_resume_upload.py  test_resume_upload_unit.py
apps/form-builder/src/utils/: file_hash.py  file_validator.py  markdown_to_pdf.py  text_cleaner.py
(+608 files in other folders)
