[project]
name = "form-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "fitz>=0.0.1.dev2",
    "google-ai-generativelanguage>=0.6.15",
    "google-genai>=2.9.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "markdown>=3.10.2",
    "pydantic[email]>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "weasyprint>=69.0",
]

[tool.uv]
package = true

[project.scripts]
form-builder = "src.main:main"

[dependency-groups]
dev = ["ruff>=0.15.16", "ty>=0.0.47"]
